# KrishiBandhu

./: README.md
backend/auth/: README.md
backend/auth/Backend/: .env.sample  .gitignore  package-lock.json  package.json
backend/auth/Backend/src/: app.js
backend/auth/Backend/src/controllers/: auth.controllers.js
backend/auth/Backend/src/middlewares/: auth.middlewares.js
backend/auth/Backend/src/routes/: auth.routes.js
backend/auth/Backend/src/services/: appwrite.js
backend/auth/Backend/src/utils/: ApiError.js
backend/auth/Frontend/: .env.sample  .gitignore  package-lock.json  package.json  vite.config.js
backend/auth/Frontend/src/: App.jsx
backend/auth/Frontend/src/api/: appwrite.js
backend/auth/Frontend/src/components/: LogoutButton.jsx  ProtectedRoute.jsx
backend/auth/Frontend/src/hooks/: useCurrentUser.js
backend/auth/Frontend/src/pages/: LoginPage.jsx  ProfilePage.jsx  RegisterPage.jsx
backend/market/: README.md
backend/microservice/: pom.xml
docs/PS/: index.html
recommedations/: main.py  pyproject.toml
recommedations/data/Processed_data/: cleaned_agri_data_complete.xlsx  cleaned_agri_data_long.csv  cleaned_agri_data_wide.csv  crop_summary_statistics.csv
recommedations/data/notebooks/Cleaning_nb's/: agri_misc_data_v1.ipynb  data.json  index.py
recommedations/data/raw_data/: Info.md  crop_varieties_released_india.xls
